--- a/app/src/main/res/layout/frg_add_goals.xml
+++ b/app/src/main/res/layout/frg_add_goals.xml
@@ -47,10 +47,9 @@
             android:text="@string/goal_class" />
         <Spinner
             android:id="@+id/spin_goalClass"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginBottom="20dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
