--- a/app/src/main/res/layout/nav_manage_goals.xml
+++ b/app/src/main/res/layout/nav_manage_goals.xml
@@ -32,7 +32,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="@string/short_goals" />
+                    android:text="@string/short_goals"
+                    android:textStyle="bold"/>
                 <ListView
                     android:id="@+id/shortListview"
                     android:layout_width="fill_parent"
@@ -50,7 +51,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="@string/medium_goals" />
+                    android:text="@string/medium_goals"
+                    android:textStyle="bold"/>
 
                 <ListView
                     android:id="@+id/middleListview"
@@ -70,7 +72,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="@string/long_goals" />
+                    android:text="@string/long_goals"
+                    android:textStyle="bold" />
                 <ListView
                     android:id="@+id/longListview"
                     android:layout_width="fill_parent"
