--- a/app/src/main/res/layout/nav_mood.xml
+++ b/app/src/main/res/layout/nav_mood.xml
@@ -154,7 +154,7 @@
                         style="@style/InputLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="xxxx" />
+                        android:text="XXXX" />
                 </LinearLayout>
             </LinearLayout>
 
